Changes in version 1.4.4

o UPDATE: citation for SemNA pipeline (in Shiny app)

o UPDATE: functionality for free association tasks from *SemNetCleaner*'s `textcleaner`

o ADD: Forward Flow for free association and verbal fluency data can be computed (see `?forward_flow`)

o CHANGE: plotting from *qgraph* to *GGally*

o CHANGE: semantic space downloads from *googledrive* rather than *osfr* (some issues kept popping up with OSF) 


Changes in version 1.4.3

o FIX: switching to different network estimations in Shiny app


Changes in version 1.4.2

o FIX: bug in reset of Shiny application

o FIX: name ordering of `bootSemNeT` plots

o ADD: t-tests to `test.bootSemNeT` and Shiny app

o FIX: p-value bug in random networks tests


Changes in version 1.4.1

o FIX: unequal nodes and edges in `test.bootSemNeT` (GitHub Issue #3)

o UPDATE: tooltips added to network estimation methods in Shiny

o UPDATE: associated Shiny packages messages suppressed on Shiny startup

o UPDATE: message for Shiny results output

o UPDATE: `test.bootSemNeT` no longer uses number of nodes in ANCOVA

o UPDATE: added minimum number (`type = "num"`) and proportion (`type = "prop"`) of co-occurrences argument to `NRW`

o UPDATE: Shiny with new `NRW` arguments

o UPDATE: Shiny now provides effect sizes for partial eta squared in Bootstrap Network Analyses tab

o FIX: `PF` remove zeros bug (when there were no zero distances, then an empty matrix was given)


Changes in version 1.4.0

o UPDATE: output names for `randwalk`

o UPDATE: Shiny interface is condensed and more step-by-step progressive

o UPDATE: Shiny includes random walk analysis

o UPDATE: Shiny includes spreading activation analysis (thanks to Cythina Siew)

o ADD: animation plot for spreading activation analysis in Shiny

o FIX: `randwalk` bug with 'steps' and 'reps' argument

o FIX: Shiny 'Clear Results' for new analyses

o UPDATE: progress bar for some Shiny analyses

o FIX: output for animation plots in Shiny
