@@ -1,7 +1,7 @@
 Package: SemNeT
 Title: Methods and Measures for Semantic Network Analysis
 Version: 1.4.4
-Date: 2022-04-21
+Date: 2022-09-09
 Authors@R: c(person("Alexander P.", "Christensen", email = "alexpaulchristensen@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-9798-7037")), person("Yoed N.", "Kenett", role = c("aut", "ctb"), comment = c(ORCID = "0000-0003-3872-7689")), person("Brendan S.", "Baker", role = c("ctb"), comment = c(ORCID = "0000-0001-5765-8952")))
 Maintainer: Alexander P. Christensen <alexpaulchristensen@gmail.com>
 Description: Implements several functions for the analysis of semantic networks including different network estimation algorithms, partial node bootstrapping (Kenett, Anaki, & Faust, 2014 <doi:10.3389/fnhum.2014.00407>), random walk simulation (Kenett & Austerweil, 2016 <http://alab.psych.wisc.edu/papers/files/Kenett16CreativityRW.pdf>), and a function to compute global network measures. Significance tests and plotting features are also implemented. Implements forward flow as described by Gray et al. (2019, <doi:10.1037/amp0000391>). 
